# wasm-aws-s3-practice

./: README.md  template.yml
wasm_examples/: README.md
wasm_examples/choices-question-wasm/: Cargo.toml  README.md
wasm_examples/choices-question-wasm/html/: index.html
wasm_examples/choices-question-wasm/src/: lib.rs
wasm_examples/file-compress-gzip-wasm/: Cargo.toml  README.md
wasm_examples/file-compress-gzip-wasm/html/: index.html
wasm_examples/file-compress-gzip-wasm/src/: lib.rs
wasm_examples/file-data-convert-add-sub-wasm/: Cargo.toml  README.md
wasm_examples/file-data-convert-add-sub-wasm/html/: index.html
wasm_examples/file-data-convert-add-sub-wasm/src/: lib.rs
wasm_examples/file-data-convert-be-le-wasm/: Cargo.toml  README.md
wasm_examples/file-data-convert-be-le-wasm/html/: index.html
wasm_examples/file-data-convert-be-le-wasm/src/: lib.rs
wasm_examples/file-data-convert-bit-rotate-wasm/: Cargo.toml  README.md
wasm_examples/file-data-convert-bit-rotate-wasm/html/: index.html
wasm_examples/file-data-convert-bit-rotate-wasm/src/: lib.rs
wasm_examples/file-hash-value-wasm/: Cargo.toml  README.md
wasm_examples/file-hash-value-wasm/html/: index.html
wasm_examples/file-hash-value-wasm/src/: lib.rs
wasm_examples/file-to-base64-text-wasm/: Cargo.toml  README.md
wasm_examples/file-to-base64-text-wasm/html/: index.html
wasm_examples/file-to-base64-text-wasm/src/: lib.rs
wasm_examples/file-to-kana-text-wasm/: Cargo.toml  README.md
wasm_examples/file-to-kana-text-wasm/html/: index.html
wasm_examples/file-to-kana-text-wasm/src/: lib.rs
wasm_examples/file-to-mp4-wasm/: Cargo.toml  README.md
wasm_examples/file-to-mp4-wasm/html/: index.html
wasm_examples/file-to-mp4-wasm/src/: lib.rs
wasm_examples/file-to-png-wasm/: Cargo.toml  README.md
wasm_examples/file-to-png-wasm/html/: index.html
wasm_examples/file-to-png-wasm/src/: lib.rs
wasm_examples/files-split-wasm/: Cargo.toml  README.md
wasm_examples/files-split-wasm/html/: index.html
wasm_examples/files-split-wasm/src/: lib.rs
wasm_examples/files-tarball-wasm/: Cargo.toml  README.md
wasm_examples/files-tarball-wasm/html/: index.html
wasm_examples/files-tarball-wasm/src/: lib.rs
wasm_examples/img-converter-wasm/: Cargo.toml  README.md
wasm_examples/img-converter-wasm/html/: index.html
wasm_examples/img-converter-wasm/src/: lib.rs
wasm_examples/json-syntax-checker-wasm/: Cargo.toml  README.md
wasm_examples/json-syntax-checker-wasm/html/: index.html
wasm_examples/json-syntax-checker-wasm/src/: lib.rs
wasm_examples/memo-wasm/: Cargo.toml  README.md
wasm_examples/memo-wasm/html/: index.html
wasm_examples/memo-wasm/src/: lib.rs
wasm_examples/message-primes-wasm/: Cargo.toml  README.md
wasm_examples/message-primes-wasm/html/: index.html
wasm_examples/message-primes-wasm/src/: lib.rs
wasm_examples/message-progress-wasm/: Cargo.toml  README.md
wasm_examples/message-progress-wasm/html/: index.html
wasm_examples/message-progress-wasm/src/: lib.rs
wasm_examples/message-timestamp-wasm/: Cargo.toml  README.md
wasm_examples/message-timestamp-wasm/html/: index.html
wasm_examples/message-timestamp-wasm/src/: lib.rs
wasm_examples/pdf-extract-text-wasm/: Cargo.toml  README.md
wasm_examples/pdf-extract-text-wasm/html/: index.html
wasm_examples/pdf-extract-text-wasm/src/: lib.rs
wasm_examples/plotters-3d-plot-wasm/: Cargo.toml  README.md
wasm_examples/plotters-3d-plot-wasm/html/: index.html
wasm_examples/plotters-3d-plot-wasm/src/: lib.rs
wasm_examples/reqwest-get-html-wasm/: Cargo.toml  README.md
wasm_examples/reqwest-get-html-wasm/html/: index.html
wasm_examples/reqwest-get-html-wasm/src/: lib.rs
wasm_examples/reqwest-post-json-wasm/: Cargo.toml  README.md
wasm_examples/reqwest-post-json-wasm/html/: index.html
wasm_examples/reqwest-post-json-wasm/src/: lib.rs
wasm_examples/toml-loader-wasm/: Cargo.toml  README.md
wasm_examples/toml-loader-wasm/html/: index.html
wasm_examples/toml-loader-wasm/src/: lib.rs
wasm_examples/txt-to-toml-wasm/: Cargo.toml  README.md
wasm_examples/txt-to-toml-wasm/html/: index.html
wasm_examples/txt-to-toml-wasm/src/: lib.rs
wasm_examples/wasm-module-into-single-html-wasm/: Cargo.toml  README.md
wasm_examples/wasm-module-into-single-html-wasm/html/: index.html
wasm_examples/wasm-module-into-single-html-wasm/src/: lib.rs
wasm_examples/wgpu-cubes-wasm/: README.md  build.rs
wasm_examples/wgpu-cubes-wasm/html/: index.html
wasm_examples/wgpu-cubes-wasm/src/: lib.rs
