[package]
name = "file-compress-gzip-wasm"
version = "0.1.0"
description = "File compress gzip project with wasm-pack"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
flate2 = "1.0"
js-sys = "0.3.59"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Blob',
  'BlobPropertyBag',
  'console',
  'Document',
  'Element',
  'Event',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Url',
  'Window',
]
