[package]
name = "file-hash-value-wasm"
version = "0.1.0"
description = "Get hash value of file project with wasm-pack"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.59"
md5 = "0.7.0"
sha2 = "0.10.6"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Blob',
  'BlobPropertyBag',
  'console',
  'Document',
  'Element',
  'Event',
  'HtmlElement',
  'Node',
  'Window',
]
