[package]
name = "img-converter-wasm"
version = "0.1.0"
description = "Image converter project with wasm-pack"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.0"
image = "0.24.3"
js-sys = "0.3.59"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Blob',
  'BlobPropertyBag',
  'console',
  'Document',
  'Element',
  'Event',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Url',
  'Window',
]
