[package]
name = "message-primes-wasm"
version = "0.1.0"
description = "Show message of prime numbers project with wasm-pack"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
primes = "0.3.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'Event',
  'HtmlElement',
  'Node',
  'Window',
]
