[package]
name = "pdf-extract-text-wasm"
version = "0.1.0"
description = "PDF extract text project with wasm-pack"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.59"
lopdf = { version = "0.26", default-features = false, features = [ "pom_parser" ] }
pdf-extract = "0.6.4"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Blob',
  'BlobPropertyBag',
  'console',
  'Document',
  'Element',
  'Event',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Url',
  'Window',
]
