[package]
name = "toml-loader-wasm"
version = "0.1.0"
description = "Toml loader project with wasm-pack"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
html-escape = "0.2.11"
js-sys = "0.3.59"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5.9"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Blob',
  'BlobPropertyBag',
  'console',
  'Document',
  'Element',
  'Event',
  'HtmlElement',
  'HtmlTextAreaElement',
  'MouseEvent',
  'Node',
  'Url',
  'Window',
]
