[package]
name = "wasm-module-into-single-html-wasm"
version = "0.1.0"
description = "Wasm module into single html project with wasm-pack"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.0"
js-sys = "0.3.59"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Blob',
  'BlobPropertyBag',
  'console',
  'Document',
  'Element',
  'Event',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Url',
  'Window',
]
